# rust_knowledge_project_cli

./: .env  Cargo.toml  README.md
db/: main.db
migrations/2024-04-19-135630_create_categorias/: down.sql  up.sql
migrations/2024-04-19-140628_create_conhecimentos/: down.sql  up.sql
src/: lib.rs  models.rs  options.rs  output.rs  routes.rs  schema.rs  tests.rs
src/options/: create.rs  delete.rs  list.rs  read.rs  update.rs
