[package]
name = "rust_knowledge_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"
strum = "0.26"
strum_macros = "0.26"
log = "0.4.21"

[[bin]]
name = "seed"
doc = false

[[bin]]
name = "rk"
doc = false

[[bin]]
name = "migrations"
doc = false